# ICP

./: .gitignore  CMakeLists.txt  CreateAnimation.ipynb  ICP.cpp  ICP.h  ICPAlgorithm.cpp  ICPAlgorithm.h  ICPVisualization.cpp  ICPVisualization.h  README.md  SaveGif.py  main.cpp  utils.cpp  utils.h
include/: ICPVisualization.h  utils.h
src/: ICPAlgorithm.cpp  ICPVisualization.cpp  main.cpp  utils.cpp
